<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smile Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="clock_show">查看已有闹钟</string>
    <string name="clock_setted">"已设置闹钟"</string>
    <string name="clock_new">"添加新闹钟"</string>
	<string name="hello">Hello World, EX06_10</string>
	<string name="str_button1">设置闹钟</string>
	<string name="str_button2">删除闹钟</string>
	<string name="str_buttonS">Setting</string>
	<string name="str_title1">只响一次的闹钟</string>
	<string name="str_title2">重复响起的闹钟</string>
	<string name="str_default">目前无设置</string>
	<string name="str_text1">开始时间</string>
	<string name="str_text2">重复响起的闹钟</string>
	<string name="str_text3">秒</string>
	<string name="list1_name">List1</string>
    <!-- This part is for the xml of setting activity --> 
	<string name="str_melody">选择铃声</string>
	<string name="str_mode">选择模式</string>
	<string name="str_info">关于闹钟</string>
	<string name="str_right">Copyright reserved by BigBug Team, 2014</string>
	<string name="str_info1">本软件旨在将模式识别、人机交互引入传统闹钟，对唤醒方式进行革新，令你开心面对每一天！</string>
	<string name="str_info2">通过设置按钮，你可以更改闹铃曲目，勾选对应条目前的方框以启用闹钟解锁方式；通过新闹钟按钮，你可以设置新的闹钟时间，你最多可同时拥有三个闹钟。</string>
	<string name="str_return">返回</string>
	<string name="str_cb1">微笑解锁</string>
	<string name="str_cb2">声音解锁</string>
	<string name="str_cb3">文本解锁</string>
	<string name="face_button">表情解锁</string>
	<string name="voice_button">声音解锁</string>
    <string name="fix_button">默认解锁</string>
    <string name="pref_summary_alarm_ringtone">闹钟铃声</string>
    <string name="select_ringtone_slient">闹钟静音</string>
</resources>
