<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<!-- android:background="@android:drawable/editbox_background"    -->
    <!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
    <!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingTop="@dimen/activity_vertical_margin" -->
    <!-- tools:context="com.example.smilealarmtask.SmileAlarmTask" > -->

	<TextView
	    android:id="@+id/cname"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/app_name"
	    android:textColor="@drawable/lightgreen"
	    android:layout_alignParentTop="true"
	    android:textSize="58sp" />	
	 
	<CheckBox  
        android:id="@+id/checkBox1"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignParentLeft="true"  
        android:layout_alignParentTop="true"  
        android:layout_marginLeft="40dp"  
        android:layout_marginTop="28dp"  
        android:text="@string/str_cb1" />  
  
    <CheckBox  
        android:id="@+id/checkBox2"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignLeft="@+id/checkBox1"  
        android:layout_below="@+id/checkBox1"  
        android:layout_marginTop="39dp"  
        android:text="@string/str_cb2" />  
  
    <CheckBox  
        android:id="@+id/checkBox3"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignLeft="@+id/checkBox2"  
        android:layout_below="@+id/checkBox2"  
        android:layout_marginTop="47dp"  
        android:text="@string/str_cb3" />  
  
</RelativeLayout>