<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<!-- android:background="@android:drawable/editbox_background"    -->
    <!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
    <!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingTop="@dimen/activity_vertical_margin" -->
    <!-- tools:context="com.example.smilealarmtask.SmileAlarmTask" > -->

	<TextView
	    android:id="@+id/cname"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/app_name"
	    android:textColor="@drawable/lightgreen"
	    android:layout_alignParentTop="true"
	    android:textSize="58sp" />	
	 
	<Button
	    android:id="@+id/ringSetting"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/cname"
	    android:text="@+string/str_melody"
	    android:layout_centerHorizontal="true" 
	    android:textColor="@drawable/azure"
	    android:textSize="18sp" />
	        
	<Button
	    android:id="@+id/modeSetting"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/ringSetting"
	    android:layout_centerHorizontal="true"
	    android:text="@string/str_mode"
	    android:textColor="@drawable/azure"
	    android:textSize="18sp" />

	<Button
	    android:id="@+id/infoSoftware"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/modeSetting"
	    android:layout_centerHorizontal="true"
	    android:text="@string/str_info"
	    android:textColor="@drawable/red"
	    android:textSize="18sp" />
	
	 <TextView
	     android:id="@+id/copyright"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_alignParentBottom="true"
	     android:layout_centerHorizontal="true"
	     android:text="@string/str_right"
	     android:textColor="@drawable/white"
	     android:textSize="14sp" />

</RelativeLayout>