<?xml version="1.1" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<!-- android:background="@android:drawable/editbox_background"    -->
    <!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
    <!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingTop="@dimen/activity_vertical_margin" -->
    <!-- tools:context="com.example.smilealarmtask.SmileAlarmTask" > -->

	<TextView
	    android:id="@+id/cname"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/app_name"
	    android:textColor="@drawable/lightgreen"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentTop="true"
	    android:textSize="58sp" />
	
	 <DigitalClock
	     android:id="@+id/dClock"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@+id/cname"
	     android:layout_centerHorizontal="true"
	     android:textColor="@drawable/blue"
	     android:textSize="40sp" />
	
	<AnalogClock
	    android:id="@+id/aClock"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@drawable/blue"
	    android:layout_below="@id/dClock"
	    android:layout_centerHorizontal="true" 
	    android:textSize="15sp" />
	
	<!-- 系统设置 -->
	<Button
	    android:id="@+id/SysSetting"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:text="@string/str_buttonS"
	    android:layout_centerHorizontal="true" 
	    android:textColor="@drawable/azure"
	    android:textSize="20sp" />
	
	<!-- 查看已有闹钟 -->
	<Button
	    android:id="@+id/ClockShow"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/clock_show"
	    android:layout_above="@id/SysSetting"
	    android:layout_centerHorizontal="true" 
	    android:textColor="@drawable/azure"
	    android:textSize="20sp" />

	 <TextView
	     android:id="@+id/setTime1"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_alignParentLeft="true"
	     android:layout_below="@+id/aClock"
	     android:text="@string/str_default"
	     android:textColor="@drawable/red"
	     android:textSize="16sp" />
	 
	 <ListView android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/MyListView">
     </ListView>

</RelativeLayout>